Corrections Soutenance : lightbox overlay Z-index + load-more-button :2fonctions dont dernière obsolète prioritare

--- a/mota_perso/css/main.css
+++ b/mota_perso/css/main.css
@@ -91,7 +91,6 @@ html{
     position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
     background: rgba(0, 0, 0, 0.8); /* noir transparent */
-    z-index: 9998;           /* Sous la lightbox */
 }
   
   /* Empêcher le scroll du body lors de l’ouverture */
@@ -652,7 +651,6 @@ body.no-scroll {
     font-family: 'Space Mono', monospace;
     font-size: 14px;
     padding: 50px 100px;
-    height: 100vh;
     h2{
         text-transform: uppercase;
         font-size:23px;
